--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   arctracker:
-    build: .
+    image: ghcr.io/axiom3d-yt/arctracker:latest
     container_name: arctracker
     ports:
       - "5000:5000"
